SigmaCodebackup3rdSep/objects/OrderLineLocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>OrderLineItemLocations</relationshipLabel>
        <relationshipName>OrderLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Un-Allocated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Discount_Euro__c</fullName>
        <label>Location Discount Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Discount__c</fullName>
        <label>Location Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrderLineItemLocations</relationshipLabel>
        <relationshipName>OrderLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>OrderLineItemLocations</relationshipLabel>
        <relationshipName>OrderLineItemLocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price</label>
        <referenceTo>Product_Price__c</referenceTo>
        <relationshipLabel>OrderLineItemLocations</relationshipLabel>
        <relationshipName>OrderLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OrderLineItemLocations</relationshipLabel>
        <relationshipName>OrderLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Ready To Ship</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Request for cancel</fullName>
                </value>
                <value>
                    <fullName>Payment Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OrderLineItemLocation</label>
    <nameField>
        <displayFormat>OLL-{0000}</displayFormat>
        <label>OrderLineLocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderLineItemLocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>